--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -7,6 +7,7 @@
     color: $blue;
     font-size: 1.4rem;
     font-weight: 600;
+    padding-bottom: 5px;
     text-transform: uppercase;
     @include breakpoint($small-only) {
       font-size: 1.2rem;
@@ -46,6 +47,7 @@
   }
   .index-year {
     font-size: 2.3rem;
+    padding-bottom: 0;
   }
   .long-description {
     p {
