Add footer controls

--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -17,7 +17,7 @@ layout: default
       </div>
     </div>
     <div class="button-container button-container--align-left row">
-     <a class="button button--index" href="{{'/' | relative_url}}"><span>Back to<br>the Index</span></a>
+     <a class="button button--index" href="{{'/' | relative_url}}"><span>Back to<br>Standard</span></a>
     </div>
   </section>
 
@@ -71,5 +71,15 @@ layout: default
 
     {% endfor %}
   </section>
+
+  <section class="section section__leading-list">
+    <div class="row align-center">
+      <div class="column large-10">
+        <hr class="hr--long">
+      </div>
+    </div>
+  </section>
+
+
 
 </main>
