--- a/source/_includes/mobile-controls.html
+++ b/source/_includes/mobile-controls.html
@@ -1,12 +1,12 @@
-<header class="top-bar" style="background-image:url({{'/images/map-overlay.png' | relative_url}})">
-  <div class="color-overlay">
-    <span class="top-bar__logo"><a href="{{ '/' | relative_url }}"><img src="{{'/images/rfa-white.svg' | relative_url }}" alt="Results for America 2018 Logo"></a></span>
-  </div>
-</header>
+  <section class="mobile-controls ">
 
-<div class="media-icons">
-  <div class="row align-right expanded">
-    <div class="column large-3 social-media-toolbar">
+    {%unless page.url == '/'%}
+    <div class="row">
+     <a class="mobile-index" href="{{'/' | relative_url}}"><span>Back to Standard</span></a>
+    </div>
+    {%endunless%}
+    <div class="row align-center media-icons-mobile">
+      <div class="column large-3 social-media-toolbar">
         <ul>
           <li class="social-media-link facebook">
             <a href="#" alt="" class="" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -18,6 +18,6 @@
             <a href="#" alt="E-mail: example@example.com" class="" target="_blank"><i class="fa fa-envelope"></i></a>
           </li>
         </ul>
-    </div>
-  </div>
-</div>
+        </div>
+      </div>
+  </section>
