Fix state type display and add buttons and number criteria

--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -1,7 +1,7 @@
 body {
   font-family: stevie-sans, sans-serif;
   p {
-    color: $main-dark-gray;
+    color: $dark-gray;
     font-family: stevie-sans, sans-serif;
     font-size: 1.2rem;
     padding-top: 20px;
