--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -15,6 +15,7 @@ $blue: #008bb9;
 $dark-blue: #12375c;
 $light-gray: #ebebeb;
 $medium-gray: #e3e3e3;
+$dark-gray: #575757;
 $font-dark-gray: #222222;
 $main-dark-gray: #999;
 $primary-green: #54c569;
