--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -36,7 +36,7 @@
     border: none;
   }
   p {
-    color: $main-dark-gray;
+    color: $dark-gray;
     font-size: 1.2rem;
     padding-bottom: 0;
     margin-bottom: 0;
