--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -25,7 +25,7 @@
 
     {{content}}
 
-    {% include mobile-controls.html %}
+    {% include mobile-social-media.html %}
     {% include footer.html %}
     {% include copyright.html %}
 
