--- a/source/_sass/_controls.scss
+++ b/source/_sass/_controls.scss
@@ -57,12 +57,12 @@
       content: 'arrow_back';
       @extend .u-material-icons;
       vertical-align: bottom;
-      padding-right: 1rem;
+      padding-right: 0.7rem;
     }
     color: $hyperlink-orange;
     margin: 0;
-    padding: 1.3rem;
-    text-transform: none;
+    padding: 1rem;
+    text-transform: uppercase;
     &:hover {
       color: $blue;
       @extend .u-transition;
@@ -71,7 +71,7 @@
 
   .media-icons-mobile {
     text-align: center;
-    padding: 0 0 0 0;
+    padding: 1rem 0 0 0;
   }
 }
 
