--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -5,9 +5,20 @@ layout: default
 {% assign criteriaYear = "2018" %}
 {% assign leadingExample = page.leading_list %}
 {% assign promisingExamples = page.promising_list | where: 'year', criteriaYear %}
+{% assign allCriteria = site.data.contentful.criteria.criteria%}
+
+{% assign currentOrder = page.order%}
+
+{% assign lastCriteria = allCriteria | sort: "order" | last %}
+{% assign lastOrder = lastCriteria.order %}
+
+{% assign previousOrder = currentOrder | minus: 1 %}
+{% assign previousCriteria = allCriteria | where: "order", previousOrder  %}
+
+{% assign nextOrder = currentOrder | plus:1 %}
+{% assign nextCriteria = allCriteria | where: "order", nextOrder  %}
 
 <main role="main" class="criteria">
-
   <section class="top-section">
     <div class="row align-center">
       <div class="column large-8 medium-8 small-12">
@@ -76,10 +87,16 @@ layout: default
   <section class="section criteria__nav">
     <div class="row">
       <div class="column small-12 medium-6 large-6 criteria__nav--previous">
-        <a href="#" ><i class="material-icons">arrow_back</i>Previous Criteria</a>
+        {% unless currentOrder == 1%}
+          {% assign previous_url = previousCriteria[0].title | replace: "/", "0000" | slugify | remove: "0000" | append: '.html' | prepend: site.project_url | relative_url%}
+          <a href="{{previous_url}}" ><i class="material-icons">arrow_back</i>Previous Criteria</a>
+        {%endunless%}
       </div>
       <div class="column small-12 medium-6 large-6 criteria__nav--next">
-        <a href="#">Next Criteria<i class="material-icons">arrow_forward</i></a>
+        {% unless currentOrder == lastOrder %}
+          {% assign next_url = nextCriteria[0].title | replace: "/", "0000" | slugify | remove: "0000" | append: '.html' | prepend: site.project_url | relative_url%}
+          <a href="{{next_url}}">Next Criteria<i class="material-icons">arrow_forward</i></a>
+        {%endunless%}
       </div>
     </div>
   </section>
