--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -2,7 +2,8 @@
   .section__description {
     font-weight: 600 !important;
     p {
-      padding-bottom: 0;
+      padding: 0;
+      margin-top: 0;
     }
   }
   .section__explanation {
