--- a/source/_includes/example.html
+++ b/source/_includes/example.html
@@ -1,5 +1,5 @@
 {% assign example = include.example %}
-
+{% assign criteria = site.data.contentful.criteria.criteria %}
 
 {%if include.criteriaName%}
   <div class="row align-center"
@@ -11,11 +11,17 @@
     </div>
   </div>
 {%endif%}
-<div class="row align-center">
-  <div class="column large-10">
-    {{example.long_description | markdownify }}
-  </div>
-</div>
+
+{% for item in criteria %}
+  {% if item.title == include.criteriaName %}
+    <div class="row align-center">
+      <div class="column large-10 criteria-description">
+        {{ item.description | markdownify }}
+      </div>
+    </div>
+  {% endif %}
+{% endfor %}
+
 <div class="row align-center"
   {%if example.state%}
     id={{example.state | slugify}}
