--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -5,11 +5,20 @@
       padding: 0;
       margin-top: 0;
     }
+    &--leading {
+      font-weight: 400!important;
+    }
   }
   .section__explanation {
     text-align: inherit;
     p {
       padding-top: 0;
+    }
+  }
+  .criteria-description {
+    p {
+      font-weight: 600;
+      margin-top: 0;
     }
   }
   @mixin example($color) {
