Add numbering to leading page

--- a/source/_includes/example.html
+++ b/source/_includes/example.html
@@ -7,7 +7,7 @@
     id={{include.criteriaName | slugify}}
     {% endif %}>
     <div class="column large-8 medium-8 small-12">
-      <h3 class="example__title--leading">{{include.criteriaName}}</h3>
+      <h3 class="example__title--leading">{{include.order}}. {{include.criteriaName}}</h3>
     </div>
   </div>
 {%endif%}
