Add social media sharing links

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -7,17 +7,7 @@
 <div class="media-icons">
   <div class="row align-right expanded">
     <div class="column large-3 social-media-toolbar">
-        <ul>
-          <li class="social-media-link facebook">
-            <a href="#" alt="" class="" target="_blank"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li class="social-media-link twitter">
-            <a href="#" alt="" class="" target="_blank"><i class="fa fa-twitter"></i></a>
-          </li>
-          <li class="social-media-link email">
-            <a href="#" alt="E-mail: example@example.com" class="" target="_blank"><i class="fa fa-envelope"></i></a>
-          </li>
-        </ul>
+        {% include share_links.html %}
     </div>
   </div>
 </div>
