--- a/source/_includes/mobile-social-media.html
+++ b/source/_includes/mobile-social-media.html
@@ -1,17 +1,7 @@
   <section class="mobile-controls ">
     <div class="row align-center media-icons-mobile">
       <div class="column large-3 social-media-toolbar">
-        <ul>
-          <li class="social-media-link facebook">
-            <a href="#" alt="" class="" target="_blank"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li class="social-media-link twitter">
-            <a href="#" alt="" class="" target="_blank"><i class="fa fa-twitter"></i></a>
-          </li>
-          <li class="social-media-link email">
-            <a href="#" alt="E-mail: example@example.com" class="" target="_blank"><i class="fa fa-envelope"></i></a>
-          </li>
-        </ul>
+        {% include share_links.html %}
         </div>
       </div>
   </section>
