Remove target blank from mail

--- a/source/_includes/share_links.html
+++ b/source/_includes/share_links.html
@@ -19,6 +19,6 @@
       <a href="{{twitter_share_link}}" alt="Twitter share link" class="" target="_blank"><i class="fa fa-twitter"></i></a>
     </li>
     <li class="social-media-link email">
-      <a href="{{mail_link}}" alt="Email share link" class="" target="_blank"><i class="fa fa-envelope"></i></a>
+      <a href="{{mail_link}}" alt="Email share link" class=""><i class="fa fa-envelope"></i></a>
     </li>
   </ul>
