--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -34,7 +34,7 @@ layout: default
 
   <section class="section section__description">
     <div class="row align-center">
-      <div class="column large-10">
+      <div class="column large-10 markdown">
         {{ page.description | markdownify }}
       </div>
     </div>
@@ -42,7 +42,7 @@ layout: default
 
   <section class="section section__explanation">
     <div class="row align-center">
-      <div class="column large-10">
+      <div class="column large-10 markdown">
         {{ page.explanation | markdownify }}
       </div>
     </div>
