Add standard download and typekit

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ '/vendor/foundation.min.css' | relative_url}}">
     <link rel="stylesheet" href="{{ '/assets/style.min.css' | relative_url}}">
 
-    <script src="https://use.typekit.net/wug7ieq.js"></script>
+    <script src="https://use.typekit.net/gyb7dga.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
