Update copyright page

--- a/source/_includes/copyright.html
+++ b/source/_includes/copyright.html
@@ -1,7 +1,7 @@
 <div class="copyright">
   <div class="row expanded">
     <div class="column small-12 medium-12 large-9">
-      <p><span class="copyrights">Copyright 2018 Results for America. All rights reserved.</span> <span class="privacy"><a href="http://results4america.org/privacy-policy/">Privacy Policy</a></span></p>
+      <p><span class="copyrights">Copyright {{site.content_year}} Results for America. All rights reserved.</span> <span class="privacy"><a href="http://results4america.org/privacy-policy/">Privacy Policy</a></span></p>
     </div>
     <div class="column small-12 medium-12 large-3 social-links-container">
       <div class="social-links">
