--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -3,7 +3,7 @@ layout: default
 
 ---
 {% assign criteriaYear = site.content_year %}
-{% assign leadingExample = page.leading_list %}
+{% assign leadingExample = page.leading_list  %}
 {% assign promisingExamples = page.promising_list | where: 'year', criteriaYear %}
 {% assign allCriteria = site.data.contentful.criteria.criteria | where: 'year', criteriaYear %}
 
@@ -24,7 +24,7 @@ layout: default
       <div class="column large-8 medium-8 small-12">
         <h1>{{criteriaYear}} State Standard of Excellence</h1>
         <hr>
-        <h2>{{page.order}}. {{page.title}}</h2>
+        <h2>{{page.title}}</h2>
       </div>
     </div>
     <div class="button-container button-container--align-left row">
@@ -54,9 +54,9 @@ layout: default
         <h3 class="example__title">Leading Example</h3>
       </div>
     </div>
-    {%if leadingExample.year == criteriaYear%}
-    {% include example.html example=leadingExample%}
-    {%endif%}
+
+    {% include example.html example=leadingExample exampleType="leading"%}
+
   </section>
 
 
@@ -77,7 +77,7 @@ layout: default
     {%for promisingExample in promisingExamples %}
 
 
-      {% include example.html example=promisingExample %}
+      {% include example.html example=promisingExample exampleType="promising" %}
 
     {% endfor %}
   </section>
