Add back button function

--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -28,7 +28,7 @@ layout: default
       </div>
     </div>
     <div class="button-container button-container--align-left row">
-     <a class="button button--index" href="{{'/' | relative_url}}"><span>Back to<br>Standard</span></a>
+     <a class="button button--index" onclick="goBack()"><span>Back to<br>Standard</span></a>
     </div>
   </section>
 
