--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="robots" content="noindex" />
-    {% include seo_tags.html%}
-    <title>{{page.title}}</title>
-    <link rel="shortcut icon" href="{{'/images/rfa-favicon.png' | relative_url}}" type="image/x-icon">
-    <link rel="stylesheet" href="{{'/vendor/foundation.min.css' | relative_url}}">
-    <link rel="stylesheet" href="{{'/vendor/styleguide-v2.1.css' | relative_url}}">
-    <link rel="stylesheet" href="{{ '/assets/style.min.css' | relative_url}}">
 
-    <script src="https://use.typekit.net/gyb7dga.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link rel="stylesheet" href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css>
-  </head>
-  <body class="cbp-spmenu-push">
-    {% include top-bar.html %}
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="noindex" />
+  {% include seo_tags.html%}
+  <title>{{page.title}}</title>
+  <link rel="shortcut icon" href="{{'/images/rfa-favicon.png' | relative_url}}" type="image/x-icon">
+  <link rel="stylesheet" href="{{'/vendor/foundation.min.css' | relative_url}}">
+  <link rel="stylesheet" href="{{'/vendor/styleguide-v2.1.css' | relative_url}}">
+  <link rel="stylesheet" href="{{ '/assets/style.min.css' | relative_url}}">
 
-    {{content}}
+  <script src="https://use.typekit.net/gyb7dga.js"></script>
+  <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
+  <link rel="stylesheet" href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css> </head> <body
+    class="cbp-spmenu-push">
+  {% include top-bar.html %}
 
-    {% include mobile-social-media.html %}
-    {% include footer.html %}
-    {% include copyright.html %}
+  {{content}}
 
-    <div id="overlay" class="js-overlay"></div>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous">
+  {% include mobile-social-media.html %}
+  {% include footer.html %}
+  {% include copyright.html %}
+
+  <div id="overlay" class="js-overlay"></div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
     </script>
-    <script src="{{'/assets/bundle.js' | relative_url}}"></script>
-
+  <script src="{{'/assets/bundle.js' | relative_url}}"></script>
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
   </body>
+
 </html>
