Add criteria dropdown nav

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -4,6 +4,10 @@
   </div>
 </header>
 
+{% if page.criteria_dropdown_nav %}
+{%include criteria-dropdown-nav.html %}
+{% endif %}
+
 <div class="media-icons">
   <div class="row align-right expanded">
     <div class="column large-3 social-media-toolbar">
