--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -1,6 +1,26 @@
 <header class="top-bar" style="background-image:url({{'/images/map-overlay.png' | relative_url}})">
+
+  <span class="top-bar__button js-trigger-menu">menu</span>
+  <nav class="main-menu js-target-menu main-menu--left">
+    <div class="top-bar__controls">
+      <span class="top-bar__button js-close-menu">close</span>
+    </div>
+    <div>
+      <a class="main-link">Downloads</a>
+      <a class="sub-link">2019 State Standard Report</a>
+      <a class="sub-link">2019 Leading Examples</a>
+      <a class="sub-link">2019 Criteria Questions</a>
+      <a class="sub-link">State Spotlights </a>
+      <a class="main-link">Leading Examples</a>
+      <a class="main-link">Examples by Criteria</a>
+    </div>
+
+  </nav> 
+
   <div class="color-overlay">
     <span class="top-bar__logo"><a href="https://results4america.org/"><img src="{{'/images/rfa-white.svg' | relative_url }}" alt="Results for America 2018 Logo"></a></span>
+
+    
   </div>
 </header>
 
