Add class to nav section in main menu

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -5,13 +5,13 @@
     <div class="top-bar__controls">
       <span class="top-bar__button js-close-menu">close</span>
     </div>
-    <div>
-      <a class="main-link">Downloads</a>
+    <div class="main-menu--links">
+      <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
       <a class="sub-link">2019 State Standard Report</a>
       <a class="sub-link">2019 Leading Examples</a>
       <a class="sub-link">2019 Criteria Questions</a>
       <a class="sub-link">State Spotlights </a>
-      <a class="main-link">Leading Examples</a>
+      <a class="main-link" href="{{'/state-standard-of-excellence/leading-examples.html' | relative_url}}">Leading Examples</a>
       <a class="main-link">Examples by Criteria</a>
     </div>
 
