--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -95,13 +95,13 @@
   .section__promising-list {
     @include example($primary-orange);
   }
-  hr.hr--long {
-    width: 100%;
-    height: 3px;
-    background-color: $medium-gray;
-    border-radius: 5px;
-    border: none;
-  }
+  // hr.hr--long {
+  //   width: 100%;
+  //   height: 3px;
+  //   background-color: $medium-gray;
+  //   border-radius: 5px;
+  //   border: none;
+  // }
 
   &__nav {
     background-color: $blue;
