--- a/source/_sass/_mixins.scss
+++ b/source/_sass/_mixins.scss
@@ -31,3 +31,11 @@
   top: 0;
   width: 100%;
 }
+
+hr.hr--long {
+  width: 100%;
+  height: 3px;
+  background-color: $medium-gray;
+  border-radius: 5px;
+  border: none;
+}
