--- a/source/_sass/_controls.scss
+++ b/source/_sass/_controls.scss
@@ -135,3 +135,15 @@
     font-size: 1.3rem;
   }
 }
+
+// downloads buttons
+.button--download {
+  @extend .u-transition;
+  color: $dark-blue;
+  background-color: #fff;
+  border: 2px solid $blue;
+  &:hover {
+    background-color: $blue;
+    color: #fff;
+  }
+}
