--- a/source/_sass/_filter.scss
+++ b/source/_sass/_filter.scss
@@ -1,9 +1,36 @@
 .examples-wrapper {
+  @extend .u-transition;
   display: inline;
+  visibility: visible;
 }
 .examples-wrapper--hidden {
   @extend .u-transition;
-  // visibility: hidden;
-  * {
+  visibility: hidden;
+}
+
+// filter styles
+.issues-dropdown-filter.select {
+  background-color: transparent;
+  margin: 0;
+  font-size: 1rem;
+  padding: 0;
+  text-align: center;
+  &::before {
+    color: #fff;
+    padding-top: 0;
   }
+}
+
+select.issues-dropdown-filter__select {
+  height: 1rem;
+  text-align: center;
+  text-align-last: center;
+  margin: 0;
+  @include breakpoint($small-only) {
+    width: 100%;
+  }
+}
+.issues-dropdown-filter__option {
+  color: #000;
+  font-size: 1rem;
 }
