--- a/source/_sass/_filter.scss
+++ b/source/_sass/_filter.scss
@@ -1,13 +1,19 @@
 .examples-wrapper {
-  @extend .u-transition;
-  display: inline;
+  
   visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 300ms;
 }
 .examples-wrapper--hidden {
-  @extend .u-transition;
+  
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
 
+.promising .examples-wrapper {
+  display: inline-block;
+}
 // filter styles
 .issues-dropdown-filter.select {
   background-color: transparent;
@@ -17,12 +23,12 @@
   text-align: center;
   &::before {
     color: #fff;
-    padding-top: 0;
+    padding-top: 4px;
   }
 }
 
 select.issues-dropdown-filter__select {
-  height: 1rem;
+  height: 2rem;
   text-align: center;
   text-align-last: center;
   margin: 0;
